src/global/grid.scss
$gap-sm: 12px;
$gap-md: 16px;
$columns: 12;

.container {
    margin: 0 auto;

    @include screen-up(sm) {
        max-width: 540px;
    }

    @include screen-up(md) {
        max-width: 720px;
    }

    @include screen-up(lg) {
        max-width: 960px;
    }

    @include screen-up(xl) {
        max-width: 1200px;
    }
}

.container,
.container-fluid {
    width: 100%;
    padding: 0 $gap-md;
    position: relative;
}

.row {
    margin: (-$gap-md * 2) (-$gap-md) 0;
    display: flex;
    flex-wrap: wrap;

    & + & {
        margin-top: 0;
    }
}

[class|='col'] {
    width: 100%;
    margin-top: $gap-md * 2;
    padding: 0 $gap-md;
}

.col {
    flex: 1 0;
}

.col-auto {
    width: auto;
}

@for $i from 1 through $columns {
    .col-#{$i} {
        width: 100% / $columns * $i;
        flex: 0 0 (100% / $columns * $i);
    }

    @include screen-up(sm) {
        .col-sm-#{$i} {
            width: 100% / $columns * $i;
            flex: 0 0 (100% / $columns * $i);
        }
    }

    @include screen-up(md) {
        .col-md-#{$i} {
            width: 100% / $columns * $i;
            flex: 0 0 (100% / $columns * $i);
        }
    }

    @include screen-up(lg) {
        .col-lg-#{$i} {
            width: 100% / $columns * $i;
            flex: 0 0 (100% / $columns * $i);
        }
    }

    @include screen-up(xl) {
        .col-xl-#{$i} {
            width: 100% / $columns * $i;
            flex: 0 0 (100% / $columns * $i);
        }
    }
}

.row-gap-sm {
    margin: (-$gap-sm * 2) (-$gap-sm) 0;

    > [class|='col'] {
        margin-top: $gap-sm * 2;
        padding: 0 $gap-sm;
    }
}

.row-gap-sm-half {
    @include screen-down(sm) {
        margin-top: -$gap-md;

        [class|='col'] {
            margin-top: $gap-md;

            > .row {
                margin-top: -$gap-md;

                [class|='col'] {
                    margin-top: $gap-md;
                }
            }
        }
    }
}

